--- a/05_django/00_django_intro/pages/templates/area.html
+++ b/05_django/00_django_intro/pages/templates/area.html
@@ -7,7 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>안녕하세요, {{ name }} 입니다.</h1>
-  <h1>나이:{{ age }} ,취미:{{ hobby }}</h1>
+  <h1>결과: {{result}}</h1>
 </body>
 </html>
