--- a/05_django/00_django_intro/pages/templates/hello.html
+++ b/05_django/00_django_intro/pages/templates/hello.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>안녕하세요, {{ name }} 입니다.</h1>
-  <h1>나이:{{ age }} ,취미:{{ hobby }}</h1>
+  <h1>안녕하세요 {{name}}</h1>
+  <h2>오늘 저녁메뉴는... {{pick}}</h2>
 </body>
 </html>
