--- a/05_django/00_django_intro/pages/templates/image.html
+++ b/05_django/00_django_intro/pages/templates/image.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>안녕하세요, {{ name }} 입니다.</h1>
-  <h1>나이:{{ age }} ,취미:{{ hobby }}</h1>
+  <h1>랜덤 이미지</h1>
+  <img src="https://picsum.photos/{{width}}/{{height}}" alt="picsum">
 </body>
 </html>
