--- a/05_django/01_django_intro_2/pages/templates/pages/static_sample.html
+++ b/05_django/01_django_intro_2/pages/templates/pages/static_sample.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="{% static 'stylesheets/sample.css'%}">
+  <link rel="stylesheet" href="{% static 'pages/stylesheets/sample.css'%}">
 </head>
 <body>
   <h1>정적 파일 출력 실습</h1>
-  <img src="{% static 'images/maxresdefault.jpg'%}" alt=""><br>
-  <img src="../static/images/maxresdefault.jpg" alt="">
+  <img src="{% static 'pages/images/maxresdefault.jpg'%}" alt=""><br>
+  <img src="/static/pages/images/maxresdefault.jpg" alt="">
 </body>
 </html>
