--- a/05_django/01_django_intro_2/pages/templates/pages/user_new.html
+++ b/05_django/01_django_intro_2/pages/templates/pages/user_new.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="/user_create/" method="POST">
+  <form action="/pages/user_create/" method="POST">
    {% csrf_token %} 
   <input type="text" name="user_id">
   <input type="password" name="pwd">
