--- a/05_django/01_django_intro_2/config/templates/base.html
+++ b/05_django/01_django_intro_2/config/templates/base.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>
+  {% block title %}
+  {% endblock title %}
+  </title>
+  {% block css %}
+  {% endblock css %}
 </head>
 <body>
-<pre>
-{{ result }}
-</pre>
+  {% comment %} <h1>base.html</h1> {% endcomment %}
+  {% block body %}
+  {% endblock body %} 
 </body>
 </html>
