--- a/05_django/03_django_crud/config/templates/articles/new.html
+++ b/05_django/03_django_crud/config/templates/articles/new.html
@@ -2,13 +2,13 @@
 
 {% block body %}
 <h1 class='text-center'></h1>
-<form action='/articles/create/' method='POST'>
+<form action="{% url 'articles:create' %}" method='POST'>
 {% csrf_token %}
-TITLE: <input type="text" name="title"><br>
-CONTENT: <textarea name="content" cols="30" rows="10" ></textarea><br>
+<label for="title">TITLE</label> <input id="title" type="text" name="title"><br>
+<label for="content">CONTENT</label><textarea id="content" name="content" cols="30" rows="10" ></textarea><br>
 
 <input type="submit">
 </form>
 <hr>
-<a href="/articles/">BACK</a>
+<a href="{% url 'articles:index' %}">BACK</a>
 {% endblock body %}
