--- a/05_django/03_django_crud/config/templates/articles/detail.html
+++ b/05_django/03_django_crud/config/templates/articles/detail.html
@@ -8,5 +8,9 @@
 <P>생성시각:{{article.created_at}}</P>
 <P>수정시각:{{article.updated_at}}</P>
 <hr>
-<a href="/articles/">[BACK]</a>
+<a href="{% url 'articles:index' %}">[BACK]</a>
+<a href="{% url 'articles:edit' article.pk %}">[EDIT]</a>
+<a href="{% url 'articles:delete' article.pk %}">[DELETE]</a>
+{% comment %} <a href="/articles/{{ article.pk }}/edit/">[EDIT]</a>
+<a href="/articles/{{ article.pk }}/delete/">[DELETE]</a> {% endcomment %}
 {% endblock body %}
