영화사이트 관리화면 추가

--- a/05_django/10_django_movie_project/config/templates/movies/index.html
+++ b/05_django/10_django_movie_project/config/templates/movies/index.html
@@ -8,10 +8,10 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">title</th>
-      <th scope="col">audience</th>
-      <th scope="col">open_date</th>
-      <th scope="col">genre</th>
+      <th scope="col">영화제목</th>
+      <th scope="col">관객수</th>
+      <th scope="col">영화개봉일</th>
+      <th scope="col">장르</th>
     </tr>
   </thead>
   <tbody>
