--- a/05_django/10_django_movie_project/config/templates/movies/new.html
+++ b/05_django/10_django_movie_project/config/templates/movies/new.html
@@ -3,63 +3,64 @@
 <nav class="navbar navbar-light bg-light">
   <span class="navbar-brand mb-0 h1">영화등록</span>
 </nav>
+<div class="col-7">
 <form action="{% url 'movies:create' %}" method="POST">
 {% csrf_token %}
   <div class="form-group row">
     <label for="title" class="col-sm-2 col-form-label">제목</label>
     <div class="col-sm-10">
-      <input id="title" type="text" name="title" required>
+      <input id="title" type="text" name="title" class="form-control" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="title_en" class="col-sm-2 col-form-label">제목(영문)</label>
     <div class="col-sm-10">
-      <input id="title_en" type="text" name="title_en" required>
+      <input id="title_en" type="text" name="title_en" class="form-control" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="audience" class="col-sm-2 col-form-label">누적 관객수</label>
     <div class="col-sm-10">
-      <input id="audience" type="number" name="audience">
+      <input id="audience" type="number" name="audience" class="form-control">
     </div>
   </div>
   <div class="form-group row">
     <label for="open_date" class="col-sm-2 col-form-label">오픈일</label>
     <div class="col-sm-10">
-      <input id="open_date" type="date" name="open_date">
+      <input id="open_date" type="date" name="open_date" class="form-control" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="genre" class="col-sm-2 col-form-label">장르</label>
     <div class="col-sm-10">
-      <input id="genre" type="text" name="genre" required>
+      <input id="genre" type="text" name="genre" class="form-control" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="watch_grade" class="col-sm-2 col-form-label">등급</label>
     <div class="col-sm-10">
-      <input id="watch_grade" type="text" name="watch_grade">
+      <input id="watch_grade" type="text" name="watch_grade" class="form-control"> 
     </div>
   </div>
   <div class="form-group row">
     <label for="score" class="col-sm-2 col-form-label">평점</label>
     <div class="col-sm-10">
-      <input id="score" type="number" name="score">
+      <input id="score" type="number" name="score" class="form-control">
     </div>
   </div>
   <div class="form-group row">
     <label for="poster_url" class="col-sm-2 col-form-label">이미지경로</label>
     <div class="col-sm-10">
-      <input id="poster_url" type="text" name="poster_url">
+      <input id="poster_url" type="text" name="poster_url" class="form-control">
     </div>
   </div>
   <div class="form-group row">
     <label for="description" class="col-sm-2 col-form-label">설명</label>
     <div class="col-sm-10">
-      <textarea id="description" name="description" cols="30" rows="10"></textarea>
+      <textarea id="description" name="description" cols="30" rows="10" class="form-control"></textarea>
     </div>
   </div>
   <input type="submit" value="저장" class="btn btn-primary">&nbsp;<input type="button" class="btn btn-primary" value="목록" onclick="location.href='{% url 'movies:index' %}'">
 </form>
-
+</div>
 {% endblock body %}
