영화목록 수정

--- a/05_django/10_django_movie_project/config/templates/movies/index.html
+++ b/05_django/10_django_movie_project/config/templates/movies/index.html
@@ -2,31 +2,31 @@
 
 {% block body %}
 
-<h1 class="text-center">영화목록</h1>
-<button type="button" class="btn btn-primary float-right" onclick="location.href='new/'">신규</button>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">이미지</th>
-      <th scope="col">영화제목</th>
-      <th scope="col">관객수</th>
-      <th scope="col">영화개봉일</th>
-      <th scope="col">장르</th>
-    </tr>
-  </thead>
-  <tbody>
+<nav class="navbar navbar-light bg-light">
+  <span class="navbar-brand mb-0 h1">영화 목록</span>
+  <button type="button" class="btn btn-primary float-right" onclick="location.href='new/'">신규</button>
+</nav>
+
+<div class="container">
+  <div class="row">
     {% for movie in movies %}
-    <tr>
-      <th>{{movie.id}}</th>
-      <td><img src="{{movie.poster_url}}" style="width:100px;"></td>
-      <td><a href="{% url 'movies:detail' movie.pk %}">{{movie.title}}</a></td>
-      <td>{{movie.audience}}</td>
-      <td>{{movie.open_date}}</td>
-      <td>{{movie.genre}}</td>
-    </tr>
+    <div class="card mb-4 shadow-sm" style="width: 12rem;">
+      <img src="{{movie.poster_url}}" class="card-img-top" alt="영화 이미지">
+      <div class="card-body">
+        <h5 class="card-title">{{movie.title}}</h5>
+        <p class="card-text">
+          <small class="text-muted">장르:{{movie.genre}}</small>
+        </p>
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='{% url 'movies:detail' movie.pk %}'">View</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='{% url 'movies:edit' movie.pk %}'">Edit</button>
+          </div>
+          <small class="text-muted"></small>
+        </div>
+      </div>
+    </div>
     {% endfor %}
-   
-  </tbody>
-</table>
+  </div>
+</div>
 {% endblock body %}
