--- a/05_django/10_django_movie_project/config/templates/movies/edit.html
+++ b/05_django/10_django_movie_project/config/templates/movies/edit.html
@@ -1,65 +1,72 @@
 {% extends 'base.html' %}
 {% block body %}
-<nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1">영화 정보 수정</span>
-</nav>
+<div class="card text-center">
+  <div class="card-header">
+    영화 정보 수정
+  </div>
+  <div class="card-body">
+  <!--body start-->
 <form action="{% url 'movies:update' movie.pk %}" method="POST">
 {% csrf_token %}
   <div class="form-group row">
     <label for="title" class="col-sm-2 col-form-label">제목</label>
     <div class="col-sm-10">
-      <input id="title" type="text" name="title" value="{{movie.title}}" required>
+      <input id="title" type="text" name="title" class="form-control" value="{{movie.title}}" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="title_en" class="col-sm-2 col-form-label">제목(영문)</label>
     <div class="col-sm-10">
-      <input id="title_en" type="text" name="title_en" value="{{movie.title_en}}" required>
+      <input id="title_en" type="text" name="title_en" class="form-control" value="{{movie.title_en}}" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="audience" class="col-sm-2 col-form-label">누적 관객수</label>
     <div class="col-sm-10">
-      <input id="audience" type="number" name="audience" value="{{movie.audience}}">
+      <input id="audience" type="number" name="audience" class="form-control" value="{{movie.audience}}">
     </div>
   </div>
   <div class="form-group row">
     <label for="open_date" class="col-sm-2 col-form-label">오픈일</label>
     <div class="col-sm-10">
-      <input id="open_date" type="date" name="open_date" value="{{movie.open_date}}" required>
+      <input id="open_date" type="date" name="open_date" class="form-control" value="{{movie.open_date}}" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="genre" class="col-sm-2 col-form-label">장르</label>
     <div class="col-sm-10">
-      <input id="genre" type="text" name="genre" value="{{movie.genre}}" required>
+      <input id="genre" type="text" name="genre" class="form-control" value="{{movie.genre}}" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="watch_grade" class="col-sm-2 col-form-label">등급</label>
     <div class="col-sm-10">
-      <input id="watch_grade" type="text" name="watch_grade" value="{{movie.watch_grade}}">
+      <input id="watch_grade" type="text" name="watch_grade" class="form-control" value="{{movie.watch_grade}}">
     </div>
   </div>
   <div class="form-group row">
     <label for="score" class="col-sm-2 col-form-label">평점</label>
     <div class="col-sm-10">
-      <input id="score" type="number" name="score" value="{{movie.score}}">
+      <input id="score" type="number" name="score" class="form-control" value="{{movie.score}}">
     </div>
   </div>
   <div class="form-group row">
     <label for="poster_url" class="col-sm-2 col-form-label">이미지경로</label>
     <div class="col-sm-10">
-      <input id="poster_url" type="text" name="poster_url" value="{{movie.poster_url}}">
+      <input id="poster_url" type="text" name="poster_url" class="form-control" value="{{movie.poster_url}}">
     </div>
   </div>
   <div class="form-group row">
     <label for="description" class="col-sm-2 col-form-label">설명</label>
     <div class="col-sm-10">
-      <textarea id="description" name="description" cols="30" rows="10">{{movie.description}}</textarea>
+      <textarea id="description" name="description" class="form-control" cols="30" rows="10">{{movie.description}}</textarea>
     </div>
   </div>
   <input type="submit" value="저장" class="btn btn-primary">&nbsp;<input type="button" class="btn btn-primary" value="목록" onclick="location.href='{% url 'movies:index' %}'">
 </form>
+  <!--body end-->
+  </div>
+</div>
+
 
 {% endblock body %}
