restfull api 구조로 변경

--- a/05_django/03_django_crud/config/templates/articles/detail.html
+++ b/05_django/03_django_crud/config/templates/articles/detail.html
@@ -9,8 +9,9 @@
 <P>수정시각:{{article.updated_at}}</P>
 <hr>
 <a href="{% url 'articles:index' %}">[BACK]</a>
-<a href="{% url 'articles:edit' article.pk %}">[EDIT]</a>
-<a href="{% url 'articles:delete' article.pk %}">[DELETE]</a>
-{% comment %} <a href="/articles/{{ article.pk }}/edit/">[EDIT]</a>
-<a href="/articles/{{ article.pk }}/delete/">[DELETE]</a> {% endcomment %}
+<a href="{% url 'articles:update' article.pk %}">[EDIT]</a>
+<form action="{% url 'articles:delete' article.pk %}" method="POST" style="display:inline;" onclick="return confirm('정말로 삭제하시겠습니까?');">
+{% csrf_token %}
+<input type="submit" value="DELETE">
+</form>
 {% endblock body %}
