--- a/05_django/03_django_crud/config/templates/articles/index.html
+++ b/05_django/03_django_crud/config/templates/articles/index.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <h1 class='text-center'>Articles</h1>
-<a href="{% url 'articles:new' %}">[NEW]</a>
+<a href="{% url 'articles:create' %}">[NEW]</a>
 
 {% for article in articles %}
 <hr>
