--- a/05_django/03_django_crud/config/templates/articles/detail.html
+++ b/05_django/03_django_crud/config/templates/articles/detail.html
@@ -16,6 +16,8 @@
 </form>
 <!--댓글 form-->
 <hr>
+{{comments|length}}개의 댓글이 있습니다.
+{{article.comment_set.all|length}}
 <strong><p>댓글</p></strong>
 <form action="{% url 'articles:comments_create' article.pk %}" method="POST">
 {% csrf_token %}
@@ -24,11 +26,13 @@
 </form>
 {% for comment in comments %}
 <hr>
-<p> {{ comment.content }}
-  <form action="{% url 'articles:comments_delete' article.pk  comment.pk %}" method="POST">
+<p> {{ comment.content }}</p>
+  <form action="{% url 'articles:comments_delete' article.pk  comment.pk %}" method="POST" >
   {% csrf_token %}
-  <input type="submit" value="댓글삭제">
+  <input type="submit" value="댓글삭제" style="display: inline;">
   </form>
-</p>
+{% empty %}
+  <p>댓글이 없는데요..</p>
+  
 {% endfor %}
 {% endblock body %}
