movie 사이트 코드 리팩토링

--- a/05_django/10_django_movie_project/config/templates/movies/detail.html
+++ b/05_django/10_django_movie_project/config/templates/movies/detail.html
@@ -59,9 +59,30 @@
       {{movie.description}}
     </div>
   </div>
-  <input type="button" class="btn btn-primary" value="수정" onclick="location.href='{% url 'movies:edit' movie.pk %}'">&nbsp;
+  <input type="button" class="btn btn-primary" value="수정" onclick="location.href='{% url 'movies:update' movie.pk %}'">&nbsp;
   <input type="button" class="btn btn-primary" value="목록" onclick="location.href='{% url 'movies:index' %}'">
   <input type="button" class="btn btn-danger" value="삭제" onclick="location.href='{% url 'movies:delete' movie.pk %}'">
 </form>
+<!--댓글 form-->
+<hr>
+{{comments|length}}개의 댓글이 있습니다.
+{{movie.comment_set.all|length}}
+<strong><p>댓글</p></strong>
+<form action="{% url 'movies:comments_create' movie.pk %}" method="POST">
+{% csrf_token %}
+<textarea name="content"></textarea>
+<input type="submit" value="댓글작성">
+</form>
+{% for comment in comments %}
+<hr>
+<p> {{ comment.content }}</p>
+  <form action="{% url 'movies:comments_delete' movie.pk  comment.pk %}" method="POST" >
+  {% csrf_token %}
+  <input type="submit" value="댓글삭제" style="display: inline;">
+  </form>
+{% empty %}
+  <p>댓글이 없는데요..</p>
+  
+{% endfor %}
 
 {% endblock body %}
