--- a/05_django/10_django_movie_project/config/templates/movies/index.html
+++ b/05_django/10_django_movie_project/config/templates/movies/index.html
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-light bg-light">
   <span class="navbar-brand mb-0 h1">영화 목록</span>
-  <button type="button" class="btn btn-primary float-right" onclick="location.href='new/'">신규</button>
+  <button type="button" class="btn btn-primary float-right" onclick="location.href='{% url 'movies:create' %}'">신규</button>
 </nav>
 
 <div class="container">
@@ -20,7 +20,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
             <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='{% url 'movies:detail' movie.pk %}'">View</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='{% url 'movies:edit' movie.pk %}'">Edit</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='{% url 'movies:update' movie.pk %}'">Edit</button>
           </div>
           <small class="text-muted"></small>
         </div>
