--- a/05_django/10_django_movie_project/config/templates/movies/index.html
+++ b/05_django/10_django_movie_project/config/templates/movies/index.html
@@ -10,7 +10,8 @@
 <div class="container">
   <div class="row">
     {% for movie in movies %}
-    <div class="card mb-4 shadow-sm" style="width: 12rem;">
+    {% comment %} <div class="card mb-4 shadow-sm" style="width: 12rem;"> {% endcomment %}
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2 col-lg-2 shadow-sm" style="width: 12rem;">
       <img src="{{movie.poster_url}}" class="card-img-top" alt="영화 이미지">
       <div class="card-body">
         <h5 class="card-title">{{movie.title}}</h5>
