--- a/05_django/10_django_movie_project/config/templates/movies/detail.html
+++ b/05_django/10_django_movie_project/config/templates/movies/detail.html
@@ -70,7 +70,7 @@
 <strong><p>댓글</p></strong>
 <form action="{% url 'movies:comments_create' movie.pk %}" method="POST">
 {% csrf_token %}
-<textarea name="content"></textarea>
+<textarea name="content" cols="60" rows="4"></textarea>
 <input type="submit" value="댓글작성">
 </form>
 {% for comment in comments %}
