--- a/05_django/03_django_crud/config/templates/articles/create.html
+++ b/05_django/03_django_crud/config/templates/articles/create.html
@@ -2,11 +2,17 @@
 
 {% block body %}
 <h1 class='text-center'></h1>
-<form action="{% url 'articles:create' %}" method='POST'>
+<!--
+  enctype
+  1. application/x-www-form-urlencoded :기본값 모든 문자 인코딩
+  2. multipart/form-data : 파일 형태 첨부시 필수 사용 / 데이터를 나누어 전송한다
+-->
+<form action="{% url 'articles:create' %}" method='POST' enctype="multipart/form-data">
 {% csrf_token %}
 <label for="title">TITLE</label> <input id="title" type="text" name="title"><br>
 <label for="content">CONTENT</label><textarea id="content" name="content" cols="30" rows="10" ></textarea><br>
-
+<label for="image">IMAGE</label>
+<input type="file" name="image" id="image" accept="image/*">
 <input type="submit">
 </form>
 <hr>
