--- a/05_django/03_django_crud/config/templates/articles/detail.html
+++ b/05_django/03_django_crud/config/templates/articles/detail.html
@@ -2,6 +2,12 @@
 
 {% block body %}
 <h1 class="text-center">DETAIL </h1>
+<!--
+  article.image.url -> 파일주소
+  article.image -> 파일이름(sample.png)
+-->
+<img src="{{article.image.url}}" alt="{{artice.image}}" /><br>
+
 <P>글 번호:{{article.pk}}</P>
 <P>글 제목:{{article.title}}</P>
 <P>글 내용:{{article.content}}</P>
