--- a/05_django/03_django_crud/config/templates/articles/index.html
+++ b/05_django/03_django_crud/config/templates/articles/index.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block css %}
-
 {% endblock css %}
 
 {% block body %}
 <h1 class='text-center'>Articles</h1>
+
+<img src="{% static 'articles/images/ui.jpg' %}" style="width:250px;"><br>
 <a href="{% url 'articles:create' %}">[NEW]</a>
 
 {% for article in articles %}
