--- a/05_django/03_django_crud/config/templates/articles/detail.html
+++ b/05_django/03_django_crud/config/templates/articles/detail.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block body %}
 <h1 class="text-center">DETAIL </h1>
 <!--
   article.image.url -> 파일주소
   article.image -> 파일이름(sample.png)
 -->
-<img src="{{article.image.url}}" alt="{{artice.image}}" /><br>
+{% if article.image %}
+<img src="{{article.image.url}}" alt="{{artice.image}}" style="width:250px;"/><br>
+{% else %}
+<!--이미지 없는경우-->
+<img src="{% static 'articles/images/no_image.jpg' %}" alt="no_image" style="width:250px;">
+{% endif %}
 
 <P>글 번호:{{article.pk}}</P>
 <P>글 제목:{{article.title}}</P>
