--- a/05_django/03_django_crud/config/templates/articles/create.html
+++ b/05_django/03_django_crud/config/templates/articles/create.html
@@ -4,7 +4,7 @@
 <h1 class='text-center'></h1>
 <!--
   enctype
-  1. application/x-www-form-urlencoded :기본값 모든 문자 인코딩
+  1. application/x-www-form-urlencoded :(기본값) 모든 문자 인코딩
   2. multipart/form-data : 파일 형태 첨부시 필수 사용 / 데이터를 나누어 전송한다
 -->
 <form action="{% url 'articles:create' %}" method='POST' enctype="multipart/form-data">
