django form model방식으로 변경

--- a/05_django/04_django_form/config/templates/articles/detail.html
+++ b/05_django/04_django_form/config/templates/articles/detail.html
@@ -12,7 +12,7 @@
 <p>수정 시각 : {{ article.updated_at }}</p>
 <hr>
 <a href="{% url 'articles:index' %}">[BACK]</a>
-<a href="{% url 'articles:update' article.pk %}">[DELETE]<a>
+<a href="{% url 'articles:update' article.pk %}">[UPDATE]<a>
 
 <hr>
 <br>
