--- a/05_django/04_django_form/config/templates/base.html
+++ b/05_django/04_django_form/config/templates/base.html
@@ -1,3 +1,5 @@
+{% load bootstrap4 %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>04_django_form</title>
-
+{% bootstrap_css %}
 </head>
 <body>
 
-  <div>
+  <div class="container">
     {% block body %}
     {% endblock body %}
   </div>
 
-
+{% bootstrap_javascript jquery='full' %}
 </body>
 </html>
