--- a/05_django/04_django_form/config/templates/base.html
+++ b/05_django/04_django_form/config/templates/base.html
@@ -12,6 +12,13 @@
 <body>
 
   <div class="container">
+    {% if user.is_authenticated %}
+      <h2>어서오세요, {{user.username}}</h2><a href="{% url 'accounts:logout' %}">로그아웃</a>
+    {% else %}
+      <a href="{% url 'accounts:login' %}">로그인</a>
+      <a href="{% url 'accounts:signup' %}">회원가입</a>
+    {% endif %}
+    
     {% block body %}
     {% endblock body %}
   </div>
