--- a/05_django/04_django_form/config/templates/articles/index.html
+++ b/05_django/04_django_form/config/templates/articles/index.html
@@ -8,6 +8,7 @@
   <a href="{% url 'articles:create' %}">[NEW]</a>
   <hr>
   {% for article in articles %}
+  <p>작성자 : {{ article.user }}</p>
   <p> [{{article.pk }}]번호</p>
   <p> 제목 : {{ article.title }}</p>
     <a href="{% url 'articles:detail' article.pk %}">[DETAIL]</a> 
