--- a/05_django/10_django_movie_project/config/templates/movies/detail.html
+++ b/05_django/10_django_movie_project/config/templates/movies/detail.html
@@ -59,27 +59,34 @@
       {{movie.description}}
     </div>
   </div>
-  <input type="button" class="btn btn-primary" value="수정" onclick="location.href='{% url 'movies:update' movie.pk %}'">&nbsp;
   <input type="button" class="btn btn-primary" value="목록" onclick="location.href='{% url 'movies:index' %}'">
+  {% if movie.user == request.user %}
   <input type="button" class="btn btn-danger" value="삭제" onclick="location.href='{% url 'movies:delete' movie.pk %}'">
+  <input type="button" class="btn btn-primary" value="수정" onclick="location.href='{% url 'movies:update' movie.pk %}'">&nbsp;
+  {% endif %}
+
 </form>
 <!--댓글 form-->
 <hr>
 {{comments|length}}개의 댓글이 있습니다.
 {{movie.comment_set.all|length}}
 <strong><p>댓글</p></strong>
-<form action="{% url 'movies:comments_create' movie.pk %}" method="POST">
-{% csrf_token %}
-<textarea name="content" cols="60" rows="4"></textarea>
-<input type="submit" value="댓글작성">
+{% if user.is_authenticated %}
+  <form action="{% url 'movies:comments_create' movie.pk %}" method="POST">
+  {% csrf_token %}
+  <textarea name="content" cols="60" rows="4"></textarea>
+  <input type="submit" value="댓글작성">
 </form>
+{% endif %}
 {% for comment in comments %}
 <hr>
 <p> {{ comment.content }}</p>
-  <form action="{% url 'movies:comments_delete' movie.pk  comment.pk %}" method="POST" >
-  {% csrf_token %}
-  <input type="submit" value="댓글삭제" style="display: inline;">
-  </form>
+  {% if comment.user == request.user %}
+    <form action="{% url 'movies:comments_delete' movie.pk  comment.pk %}" method="POST" >
+    {% csrf_token %}
+    <input type="submit" value="댓글삭제" style="display: inline;">
+    </form>
+  {% endif %}
 {% empty %}
   <p>댓글이 없는데요..</p>
   
