--- a/05_django/04_django_form/config/templates/base.html
+++ b/05_django/04_django_form/config/templates/base.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>04_django_form</title>
 {% bootstrap_css %}
+<!-- FontAwesome -->
+<script src="https://kit.fontawesome.com/a84f15c24e.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
