--- a/05_django/04_django_form/config/templates/articles/index.html
+++ b/05_django/04_django_form/config/templates/articles/index.html
@@ -4,8 +4,9 @@
   <br>
   <h1>Articles</h1>
   <hr>
-
+  {% if user.is_authenticated %}    
   <a href="{% url 'articles:create' %}">[NEW]</a>
+  {% endif %}
   <hr>
   <div class="row">
     {% for article in articles %}
