--- a/05_django/04_django_form/config/templates/_nav.html
+++ b/05_django/04_django_form/config/templates/_nav.html
@@ -6,7 +6,13 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      {% if user.is_authenticated %}    
+      {% if user.is_authenticated %} 
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'articles:list' %}">좋은글보기</a>
+        </li>   
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'articles:explore' %}">전부보기</a>
+        </li>  
         <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:profile' user.username %}">마이페이지</a>
         </li>
