--- a/05_django/04_django_form/config/templates/articles/_follow.html
+++ b/05_django/04_django_form/config/templates/articles/_follow.html
@@ -3,6 +3,11 @@
   <p class="lead">
     팔로워:{{person.followers.all|length}}명 | 팔로잉:{{person.followings.all|length}}명
   </p>
+  {% for follower in person.followers.all %}
+    <p>{{ follower.username }}</p>
+  {% empty %}
+    <p>팔로워가 없어요..</p>
+  {% endfor %}
   <hr class="my-4">
   <p></p>
   {% if user != article.user %}
