--- a/05_django/04_django_form/config/templates/accounts/login.html
+++ b/05_django/04_django_form/config/templates/accounts/login.html
@@ -1,12 +1,22 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
+{% load socialaccount %}
 
 {% block body %}
+{% if request.resolver_match.url_name == 'signup' %}
+<h1>회원가입</h1>
+{% elif request.resolver_match.url_name == 'login' %}
 <h1>로그인</h1>
+{% elif request.resolver_match.url_name == 'update' %}
+<h1>회원정보변경</h1>
+{% else %}
+<h1>비밀번호변경</h1>
+{% endif %}
 <hr>
 <form action="" method="POST">
 {% csrf_token %}
 {% bootstrap_form form %}
-{% buttons submit='로그인' reset="초기화" %}{% endbuttons %}
+{% buttons submit='확인' reset="초기화" %}{% endbuttons %}
+<a class="btn btn-warning" href="{% provider_login_url 'kakao' %}">카카오 로그인</a>
 </form>
 {% endblock body %}
