--- a/05_django/11_django_movie_project2/config/templates/movies/index.html
+++ b/05_django/11_django_movie_project2/config/templates/movies/index.html
@@ -19,7 +19,8 @@
       
       <div class="card-body">
         <h5 class="card-title"><a href="{% url 'movies:detail' movie.pk %}">{{movie.title}}</a></h5>
-        <p class="card-text">          
+        <p class="card-text">   
+        {{movie.rating_set.score}}
         </p>
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
