--- a/05_django/06_django_axios/config/templates/articles/index.html
+++ b/05_django/06_django_axios/config/templates/articles/index.html
@@ -8,12 +8,44 @@
   <a href="{% url 'articles:create' %}">[NEW]</a>
   {% endif %}
   <hr>
+  <form class="mb-4" action="{% url 'articles:search' %}">
+    <div class="form-row justify-content-center">
+      <div class="mb-2 col-12 col-sm-9 col-md-10">
+        <input type="text" class="form-control" name="query" placeholder="제목을 입력해주세요">
+      </div>
+      <div class="col-12 col-sm-3 col-md-2">
+        <input type="submit" class="form-control btn btn-success" value="검색">
+      </div>
+    </div>
+  </form>
+
   <div class="row">
     {% for article in articles %}
     <!-- 모듈화 시켜둔 article 템플릿 가져오기 -->
     {% include 'articles/_article.html' %}
     {% endfor %}
   </div>
+  
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    {% if articles.has_previous %}
+    <li class="page-item ">
+      <a class="page-link" href="{% url 'articles:index' %}?page={{articles.previous_page_number}}" tabindex="-1" aria-disabled="true">Previous</a>
+    </li>
+    {% endif %}
+    <!--페이지버튼-->
+    {% for num in articles.paginator.page_range %}
+    <li class="page-item"><a class="page-link" href="{% url 'articles:index' %}?page={{ num }}">{{ num }}</a></li>
+    {% endfor%}
+
+    {% if articles.has_next %}
+    <li class="has_next">
+      <a class="page-link" href="{% url 'articles:index' %}?page={{articles.next_page_number}}">Next</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
+
   <script>
   //1.좋아요 버튼 가져오기
   const likeButtons = document.querySelectorAll('.like-button')
